--- a/Just4FunApp/PopupTest.xaml
+++ b/Just4FunApp/PopupTest.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Just4FunApp.MainWindow"
+﻿<Window x:Class="Just4FunApp.PopupTest"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Just4FunApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="PopupTest" Height="450" Width="800">
     <Grid>
-        <Button Width="100" Height="50" Click="Button_Click">HalloWelt</Button>
+        <Label Content="Ich bin ein Test" HorizontalAlignment="Left" Margin="350,187,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
